--- a/template/.babelrc
+++ b/template/.babelrc
@@ -1,13 +1,9 @@
 {
-  "presets": [
-    ["es2015", { "modules": false }],
-    "stage-2"
+  "presets": ["es2015", "stage-2"],
+  "plugins": [
+    "transform-runtime",
+    "transform-object-rest-spread",
+    "transform-vue-jsx"
   ],
-  "plugins": ["transform-runtime"],
-  "comments": false,
-  "env": {
-    "test": {
-      "plugins": [ "istanbul" ]
-    }
-  }
+  "comments": false
 }
