--- a/template/.editorconfig
+++ b/template/.editorconfig
@@ -1,9 +1,32 @@
+# editorconfig.org
+
 root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
 end_of_line = lf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.py]
+indent_size = 4
+
+[*.js]
+indent_size = 2
+
+[*.json]
+indent_size = 2
+
+[*.styl]
+indent_size = 2
+
+[*.pug]
+indent_size = 2
+
+[*.jade]
+indent_size = 2
