--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,7 +1,49 @@
+# Ignore docs files
+_gh_pages
+_site
+.ruby-version
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
+
+# OS or Editor folders
+._*
+.cache
 .DS_Store
-node_modules/
-dist/
-npm-debug.log
+.idea
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-workspace
+*.sublime-project
+nbproject
+Thumbs.db
+
+# Komodo
+.komodotools
+*.komodoproject
+
+# Ignore temporatry files
+tmp-*
+temp
+
+# Folders to ignore
+bower_components
+node_modules
+
+
+# Ignore builded stuff
+dest
 {{#unit}}
 test/unit/coverage
 {{/unit}}
