--- a/template/package.json
+++ b/template/package.json
@@ -1,102 +1,108 @@
 {
   "name": "{{ name }}",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "{{ description }}",
   "author": "{{ author }}",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/{{ author }}/{{ name }}.git"
+  },
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js"{{#unit}},
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
-    "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
-    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
-    "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
+    "gulp:watch": "gulp --gulpfile build/gulp/base.js --cwd ./ watch",
+    "gulp:build": "gulp --gulpfile build/gulp/base.js --cwd ./ build",
+    "wp:dev": "cross-env NODE_ENV=development webpack --config build/webpack/dev.js --progress --colors --watch",
+    "wp:watch": "npm run wp:dev",
+    "wp:server": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack/server.js --open --inline --hot",
+    "wp:build": "cross-env NODE_ENV=production webpack --config build/webpack/dist.js",
+    "watch": "./node_modules/.bin/concurrently \"npm run gulp:watch\" \"npm run wp:watch\"",
+    "build": "./node_modules/.bin/concurrently \"npm run gulp:build\" \"npm run wp:build\"",
+    "start": "npm run watch",
+    "dev": "npm run watch"
   },
   "dependencies": {
-    "vue": "^2.1.10"{{#router}},
-    "vue-router": "^2.2.0"{{/router}}
+    "stem-stylus-extensions": "git+https://github.com/preusx/stem-stylus-extensions.git#1.0.1",
+    "vue": "^2.1.10"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    {{#lint}}
     "babel-eslint": "^7.1.1",
-    {{/lint}}
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    {{#lint}}
     "eslint": "^3.14.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
-    {{#if_eq lintConfig "standard"}}
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
-    {{/if_eq}}
-    {{#if_eq lintConfig "airbnb"}}
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    {{/if_eq}}
-    {{/lint}}
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.2",
-    "file-loader": "^0.10.0",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    {{#unit}}
+    "chalk": "^1.1.3",
+    "autoprefixer": "^6.7.3",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.3.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "babel-runtime": "^6.23.0",
+    "browser-sync": "^2.18.8",
+    "concurrently": "^3.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sinon-chai": "^1.2.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
-    "chai": "^3.5.0",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "inject-loader": "^2.0.1",
-    "babel-plugin-istanbul": "^3.1.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    {{/unit}}
-    {{#e2e}}
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
-    "selenium-server": "^3.0.1",
-    {{/e2e}}
-    "semver": "^5.3.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^11.0.0",
+    "css-loader": "^0.26.1",
+    "css-mqpacker": "5.0.1",
+    "deep-assign": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
+    "gulp-changed": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.3.0",
+    "gulp-pug": "^3.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-stylus": "^2.6.0",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "html-webpack-plugin": "^2.28.0",
+    "laggard": "0.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.0",
+    "node-notifier": "^5.0.2",
+    "postcss-alias": "1.0.0",
+    "postcss-calc": "^5.3.1",
+    "postcss-clearfix": "1.0.0",
+    "postcss-compact-mq": "0.2.1",
+    "postcss-csso": "1.1.2",
+    "postcss-define-units": "github:preusx/postcss-define-units#1.1.1",
+    "postcss-filter-mq": "1.0.1",
+    "postcss-fontpath": "0.3.0",
+    "postcss-input-style": "0.3.0",
+    "postcss-loader": "^1.3.1",
+    "postcss-position": "0.5.0",
+    "postcss-quantity-queries": "0.4.0",
+    "postcss-round-subpixels": "^1.2.0",
+    "postcss-selector-not": "2.0.0",
+    "postcss-short-spacing": "2.0.1",
+    "postcss-transform-shortcut": "2.0.1",
+    "postcss-verthorz": "0.6.2",
+    "postcss-vertical-rhythm": "^1.1.5",
+    "pug": "^2.0.0-beta4",
+    "pug-html-loader": "^1.1.0",
+    "pug-loader": "^2.3.0",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.5.0",
+    "vue-hot-reload-api": "^2.0.9",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^11.1.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "webpack-dev-server": "^2.4.0"
   }
 }
